# J1

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
configs/: medqa_eval.yaml  pubmed_patient_case_pipeline.yaml  pubmed_qa_pipeline.yaml  pubmed_sft_pipeline.yaml  pubmed_summary_pipeline.yaml  pubmedqa_eval.yaml
data/: pubmedqa.jsonl
j1/: cli.py
j1/data_loaders/: __init__.py  base.py  local.py  pubmed.py
j1/eval/: base.py  medqa.py  pubmedqa.py  run.py
j1/pipelines/: base.py
j1/process/: __init__.py  base.py  filters.py  mappers.py  qa_mapper.py  summarize.py  writers.py
tests/: __init__.py
tests/data_loaders/: test_pubmed.py
tests/pipeline/: test_mappers.py
tests/process/: test_processors.py
